--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,3 @@
-/*
-   Copyright 2011 the original author or authors.
-
-   Licensed under the Apache License, Version 2.0 (the "License");
-   you may not use this file except in compliance with the License.
-   You may obtain a copy of the License at
-
-       http://www.apache.org/licenses/LICENSE-2.0
-
-   Unless required by applicable law or agreed to in writing, software
-   distributed under the License is distributed on an "AS IS" BASIS,
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   See the License for the specific language governing permissions and
-   limitations under the License.
- */
 defaultTasks 'assemble'
 
 repositories {
@@ -20,55 +5,19 @@ repositories {
 }
 
 allprojects {
-    apply plugin: 'idea'
     apply plugin: 'groovy'
 
-    group = 'net.desource.gradle'
-    version = '0.3-SNAPSHOT'
+    group = 'org.gradle.api.plugins'
+    version = '0.1-SNAPSHOT'
 }
-
-def libraries = [
-        hamcrest_core: 'org.hamcrest:hamcrest-core:1.1@jar',
-        hamcrest_lib:  'org.hamcrest:hamcrest-library:1.1@jar',
-        objenesis:     'org.objenesis:objenesis:1.2@jar',
-        junit:         'junit:junit:4.8.2',
-        cglib:         'cglib:cglib-nodep:2.2@jar',
-        slf4j_api:     'org.slf4j:slf4j-api:1.6.1@jar',
-        slf4j_jdk14:   'org.slf4j:slf4j-jdk14:1.6.1@jar',
-]
-
-libraries.jmock = [ 'org.jmock:jmock:2.5.1@jar',
-                    'org.jmock:jmock-junit4:2.5.1@jar',
-                    'org.jmock:jmock-legacy:2.5.1@jar',
-                    libraries.hamcrest_core,
-                    libraries.hamcrest_lib,
-                    libraries.objenesis,
-                    libraries.cglib ]
 
 dependencies {
-
-    compile localGroovy();
-
+    compile localGroovy()
     compile gradleApi()
-
-    testCompile libraries.junit, libraries.jmock, libraries.slf4j_jdk14
-
+    testCompile 'junit:junit:4.11'
 }
 
-idea {
-    module {
-        excludeDirs += file('repo/')
-        excludeDirs += file('wrapper/')
-    }
-
-    project {
-        wildcards += ['?*.gradle']
-        languageLevel = '1.6'
-    }
-}
-
-//  Wrapper stuff.
 task wrapper ( type : Wrapper ) {
-  gradleVersion = '1.0-milestone-3'
-  jarFile = 'wrapper/gradle-wrapper.jar'
+  gradleVersion = '1.8'
+    jarFile = '.wrapper/gradle-wrapper.jar'
 }
