Rename package and groupId to org.gradle.api.plugins

--- a/src/main/resources/META-INF/gradle-plugins/gwt.properties
+++ b/src/main/resources/META-INF/gradle-plugins/gwt.properties
@@ -13,4 +13,4 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 #
-implementation-class=net.desource.gradle.plugin.gwt.Gwt2Plugin
+implementation-class=org.gradle.api.plugins.gwt.GwtPlugin
